<resources>
    <string name="app_name">BTtrax</string>
    <string name="illegal_move">ルール違反です！違う場所または違うパネルをおいてください。</string>
    <string name="title">Trax</string>
    <string name="rule">Rule</string>
    <string name="play_mode">Play</string>
    <string name="BT_mode_server">BT Server</string>
    <string name="BT_mode_client">BT Client</string>
    <string name="red_turn">赤プレイヤーのターンです！</string>
    <string name="white_turn">白プレイヤーのターンです！</string>
    <string name="your_turn">あなたのターンです！</string>
    <string name="opponent_turn">相手のターンです！</string>
    <string name="red_win">赤プレイヤーの勝利です！</string>
    <string name="white_win">白プレイヤーの勝利です！</string>
    <string name="your_win">あなたの勝利です！</string>
    <string name="opponent_win">相手の勝利です！</string>
    <string name="draw_game">引き分けです。お互いに勝利を分かち合いましょう</string>
    <string name="panel1_description">十字パネルを置くボタン</string>
    <string name="panel2_description">カーブパネルを置くボタン1</string>
    <string name="panel3_description">カーブパネルを置くボタン2</string>
    <string name="bluetooth_not_available">Bluetoothがサポートされていません</string>
    <string name="bluetooth_not_accept">Bluetoothを使わないとこのモードは利用できません</string>
    <string name="bluetooth_connection_failed">接続に失敗しました</string>
    <string name="player_white">あなたは白プレーヤーです::</string>
    <string name="player_red">あなたは赤プレーヤーです::</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="try_connection">本当にこの端末に接続してみますか</string>
    <string name="scanning_requires_permission">Bluetoothデバイスのスキャニングには次の許可が必要です：%s</string>
</resources>
