<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <jp.ac.titech.itpro.maaki.bttrax.TopView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F5FFFFFF"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    </jp.ac.titech.itpro.maaki.bttrax.TopView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rule"
            android:textSize="@dimen/button_text_size"
            android:onClick="onClickRule"
            android:textColor="#FF000000"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play_mode"
            android:textSize="@dimen/button_text_size"
            android:onClick="onClickPlayMode"
            android:textColor="#FF000000"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/server_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_mode_server"
            android:textSize="@dimen/button_text_size"
            android:textColor="#FF000000"
            android:onClick="onClickBTMode"
            style="?android:attr/buttonBarButtonStyle"/>


        <Button
            android:id="@+id/client_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_mode_client"
            android:textSize="@dimen/button_text_size"
            android:textColor="#FF000000"
            android:onClick="onClickBTMode"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/connection_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>