<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ac.titech.itpro.maaki.bttrax.MainActivity">

    <TextView
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/message_text_size"/>

    <jp.ac.titech.itpro.maaki.bttrax.BoardView
        android:id="@+id/board_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_panel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickPanel"
            android:contentDescription="@string/panel1_description"
            android:src="@drawable/panel1"/>

        <ImageButton
            android:id="@+id/button_panel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickPanel"
            android:contentDescription="@string/panel2_description"
            android:src="@drawable/panel2"/>

        <ImageButton
            android:id="@+id/button_panel3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickPanel"
            android:contentDescription="@string/panel3_description"
            android:src="@drawable/panel3"/>

    </LinearLayout>
</LinearLayout>
